--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Website</title>
+</head>
+<body>
+  <h1>Welcome to My Website</h1>
+  <nav>
+    <ul>
+      <li><a href="perc_MDD_neg.html">About Us</a></li>
+    </ul>
+  </nav>
+</body>
+</html>
