--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <nav>
     <ul>
       <li><a href="perc_MDD_neg.html">About Us</a></li>
+      <li><a href="perc_MDD_pos.html">Services</a></li>
     </ul>
   </nav>
 </body>
