--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Website</title>
+  <title>ENIGMA MDD Normative modelling paper</title>
 </head>
 <body>
   <h1>Welcome to My Website</h1>
   <nav>
     <ul>
-      <li><a href="perc_MDD_neg.html">About Us</a></li>
-      <li><a href="perc_MDD_pos.html">Services</a></li>
+      <li><a href="perc_MDD_neg.html">negative deviations MDD</a></li>
+      <li><a href="perc_MDD_pos.html">positive deviations MDD</a></li>
+      <li><a href="perc_HC_neg.html">negative deviations healthy controls </a></li>
+      <li><a href="perc_HC_pos.html">positive derivations healthy controls</a></li>
     </ul>
   </nav>
 </body>
