Update index.html - add spiderplot

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <ul>
       <li><a href="perc_MDD_neg.html">negative deviations MDD</a></li>
       <li><a href="perc_MDD_pos.html">positive deviations MDD</a></li>
-      <li><a href="perc_HC_neg.html">negative deviations healthy controls </a></li>
-      <li><a href="perc_HC_pos.html">positive derivations healthy controls</a></li>
+      <li><a href="spider_plot.html">average z-score difference MDD vs. HC </a></li>
     </ul>
   </nav>
 </body>
