--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
   <h1>Welcome to My Website</h1>
   <nav>
     <ul>
+      <li><a href="train_demographics.html">Figure 1A: Train set demographics, healthy controls</a></li>
+      <li><a href="test_demographics.html">Figure 1B: Test set demographics, healthy controls</a></li>
+      <li><a href="test_MDD_demographics.html">Figure 1C: Test set demographics, depression</a></li>
+      <li><a href="">Figure 2A: Fusiform gyrus</a></li>
+      <li><a href="M_parsopercularis.html">Figure 2B: Pars opercularis of the inf. front. gyrus</a></li>
+      <li><a href="M_Thickaverage.html">Figure 2C: average cortical thickness</a></li>
+      <li><a href="">Figure 2D/E: Cohen's D effect size</a></li>
+      <li><a href="spider_plot.html">Figure 2F: average z-score difference MDD vs. HC </a></li>
       <li><a href="perc_MDD_neg.html">negative deviations MDD</a></li>
       <li><a href="perc_MDD_pos.html">positive deviations MDD</a></li>
-      <li><a href="spider_plot.html">average z-score difference MDD vs. HC </a></li>
     </ul>
   </nav>
 </body>
