--- a/test.html
+++ b/test.html
@@ -14,7 +14,7 @@
 
     <h2>Cohen\'s d 3D Brain Visualization</h2>
 
-    <iframe src="spiderplot.html"></iframe>  <!-- Embeds the saved plot -->
+    <iframe src="spider_plot.html"></iframe>  <!-- Embeds the saved plot -->
 
     <div class="note">
         <p><strong>Note:</strong> This plot visualizes Cohen\'s d values across brain regions.
