--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>ENIGMA MDD Normative modelling paper</title>
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
+  <h1>ENIGMA MDD Normative modelling paper</h1>
   <nav>
     <ul>
       <li><a href="perc_MDD_neg.html">negative deviations MDD</a></li>
