update Figure 1 and 2

--- a/Figure1.html
+++ b/Figure1.html
@@ -12,31 +12,28 @@
 </head>
 <body>
 
-    <h2>Demographics Training Control set</h2>
+    <h2>Figure 2A: Fusiform gyrus</h2>
 
-    <iframe src="train_demographics.html"></iframe>  <!-- Embeds the saved plot -->
+    <iframe src="M_fusiform.html"></iframe>  <!-- Embeds the saved plot -->
 
     <div class="note">
-        <p><strong>Note:</strong> This plot visualizes Cohen\'s d values across brain regions.
-        Grey indicates no effect, while darker colors indicate stronger effects.</p>
+        <p><strong>Note:</strong> Fusiform gyrus</p>
     </div>
 
-        <h2>Demographics Test Control set</h2>
+        <h2>Pars opercularis</h2>
 
-    <iframe src="test_demographics.html"></iframe>  <!-- Embeds the saved plot -->
+    <iframe src="M_parsopercularis.html"></iframe>  <!-- Embeds the saved plot -->
 
     <div class="note">
-        <p><strong>Note:</strong> This plot visualizes Cohen\'s d values across brain regions.
-        Grey indicates no effect, while darker colors indicate stronger effects.</p>
+        <p><strong>Note:</strong> Pars opercularis.</p>
     </div>
 
-     <h2>Demographics Test MDD set</h2>
+     <h2>Average cortical thickness</h2>
 
-    <iframe src="test_MDD_demographics.html"></iframe>  <!-- Embeds the saved plot -->
+    <iframe src="M_Thickaverage.html"></iframe>  <!-- Embeds the saved plot -->
 
     <div class="note">
-        <p><strong>Note:</strong> This plot visualizes Cohen\'s d values across brain regions.
-        Grey indicates no effect, while darker colors indicate stronger effects.</p>
+        <p><strong>Note:</strong> Average cortical thickness</p>
     </div>
 
 </body>
