--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <h1>ENIGMA MDD Normative modelling paper</h1>
   <nav>
     <ul>
+      <li><a href="Figure1.html">Figure 1</a></li>
+      <li><a href="Figure2.html">Figure 2</a></li>
       <li><a href="train_demographics.html">Figure 1A: Train set demographics, healthy controls</a></li>
       <li><a href="test_demographics.html">Figure 1B: Test set demographics, healthy controls</a></li>
       <li><a href="test_MDD_demographics.html">Figure 1C: Test set demographics, depression</a></li>
